<resources>
    <string name="app_name">PODA</string>

    // General
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
    <string name="invalid_signup_format">Request failed. Please make sure to provide a valid email and password</string>
    <string name="invalid_user">Wrong email or password</string>
    <string name="connection_error">Connection Error</string>
    <string name="category_fetch_error">Connection Error while fetching categories. Please try again</string>

    // Menu Titles
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="tasks">Tasks</string>
    <string name="sort">Sort</string>
    <string name="creation_date">Creation date</string>

    // TodosFragment
    <string name="fragment_todos_empty_view">You don\'t have any TODOs yet. \n Press the Button to create your first one.</string>
    <string name="fragment_todos_empty_view_home">You don\'t have any TODOs yet. \n</string>

    // ProfileFragment
    <string name="profile_joined_on">Joined on</string>
    <string name="profile_categories_used">Categories used</string>
    <string name="profile_total_tasks">Total tasks</string>
    <string name="profile_tasks_completed">Tasks completed</string>
    <string name="profile_most_used_category">Most used category</string>

    // CreateTodo
    <string name="title_activity_create_todo">CreateTodoActivity</string>
    <string name="create_todo">Create</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="due_date">Due date</string>
    <string name="due_date_short">D:</string>
    <string name="creation_date_short">C:</string>

    // Sort
    <string name="sort_title">Sort by</string>

</resources>
