<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    android:layout_marginEnd="@dimen/horizontal_margin"
    android:layout_marginBottom="@dimen/vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="60sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50sp"
            android:src="@mipmap/ic_list" />

        <EditText
            android:id="@+id/signup_name"
            style="@style/input"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/input"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/input"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signup_password_confirmation"
            style="@style/input"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/signup_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/light_blue" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/signup_loading"
            style="@style/SpinKitView.WanderingCubes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:SpinKit_Color="@color/blue" />

    </LinearLayout>

</ScrollView>