<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".views.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="210dp"
                    android:layout_height="200dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"
                        app:civ_border_color="@color/white" />


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_add"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/circle_background"
                        android:src="@drawable/ic_photo"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp"
                        android:layout_margin="5dp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/dark_blue"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:text="John Doe" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_round_background_white"
                android:elevation="2dp"
                android:paddingStart="@dimen/horizontal_margin"
                android:paddingTop="10dp"
                android:paddingEnd="@dimen/horizontal_margin"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/joined_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/profile_joined_on"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/joined"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="Mon, 16 September of 2019"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/categories_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/joined_text"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_categories_used"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/categories_used"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/joined"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:text="4"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_tasks_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/categories_text"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_total_tasks"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/categories_used"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:text="39"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tasks_completed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/total_tasks_text"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_tasks_completed"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tasks_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/total_tasks"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:text="25"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/most_used_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tasks_completed_text"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_most_used_category"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/most_used_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tasks_completed"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:text="Shopping"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10dp"
                android:text="@string/logout" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/profile_loading"
                style="@style/SpinKitView.WanderingCubes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:SpinKit_Color="@color/blue" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>